# agora

./: .dockerignore  .env.sample  .gitignore  ATTRIBUTION.md  Cargo.toml  Dockerfile  README.md  entrypoint.sh  justfile  rustfmt.toml
.cargo/: config.toml
.github/: dependabot.yaml
.github/workflows/: audit.yaml  build.yaml  ci.yaml  docker.yaml  docker.yml  package.yaml
agora-lnd-client/: Cargo.toml  build.rs
agora-lnd-client/src/: core_lightning.rs  grpc_service.rs  https_service.rs  invoice.rs  lib.rs  lnd.rs  millisatoshi.rs
agora-test-context/: Cargo.toml
agora-test-context/src/: lib.rs
docker/: docker-compose.mainnet.yml  docker-compose.override.yml  docker-compose.yml  torrc
docker/lnd/: Dockerfile  start-lnd.sh  wait-for-block-index.sh
docs/: index.html
docs/files/blog/: index.html  mvp.html
docs/files/blog/version-0.1.0/: index.html
docs/files/trophies/: README.md.html  huhu.mp3.html  index.html  mvp.html
docs/files/trophies/test-files/: index.html  smiley.png.html
example-files/: .agora.yaml  .index.md  README.md  foo  speciäl charactärß
example-files/free/: .agora.yaml  bar
layer-playground/: Cargo.toml
layer-playground/src/: lib.rs
lnd-client/: Cargo.toml  build.rs
lnd-client/proto/: README.md
lnd-client/src/: grpc_service.rs  lib.rs  owned_child.rs  single_cert_verifier.rs  test_context.rs
lnd-client/tests/: test-cert.pem
lnd-test-context/: Cargo.toml
lnd-test-context/src/: executables.rs  lib.rs  owned_child.rs
src/: arguments.rs  bind_listen_serve.rs  common.rs  config.rs  connection_handler.rs  display_size.rs  environment.rs  error.rs  error_page.rs  file_path.rs  file_stream.rs  files.rs  html.rs  https_redirect_service.rs  https_request_handler.rs  input_path.rs  main.rs  redirect.rs  request_handler.rs  server.rs  static_assets.rs  stderr.rs  test_utils.rs  tests.rs  tls_request_handler.rs  vfs.rs  virtual_file.rs
src/tests/: browser_tests.rs  slow_tests.rs
src/vfs/: config.rs
static/: ATTRIBUTION  index.css  index.js
tests/: backtrace.rs  html_validation.rs  integration.rs  smoke.rs  status.rs
