[package]
name = "agora"
version = "0.0.2"
description = "Serve a local directory over HTTP"
authors = ["Casey Rodarmor <casey@rodarmor.com>", "Sönke Hahn <soenkehahn@gmail.com>"]
license = "CC0-1.0"
edition = "2018"
resolver = "2"
repository = "https://github.com/soenkehahn/agora"
homepage = "https://github.com/soenkehahn/agora"

[workspace]
members = [".", "bin/prerelease", "agora-lnd-client", "lnd-test-context"]

[dependencies]
backtrace = "0.3.61"
bytes = "1.0.1"
color-backtrace = "0.5.1"
futures = "0.3.14"
hex = "0.4.3"
http = "0.2.4"
lexiclean = "0.0.1"
maud = "0.22.2"
mime_guess = "2.0.3"
openssl = "0.10.35"
percent-encoding = "2.1.0"
pin-project = "1.0.7"
qrcodegen = "1.6.0"
rust-embed = "5.9.0"
serde_yaml = "0.8.17"
termcolor = "1.1.2"
tonic = "0.4.3"

[dependencies.agora-lnd-client]
path = "agora-lnd-client"
version = "0.0.0"

[dependencies.hyper]
version = "0.14.7"
features = ["server", "stream", "tcp", "http1", "http2"]

[dependencies.serde]
version = "1.0.126"
features = ["derive"]

[dependencies.snafu]
version = "0.6.10"
features = ["backtraces-impl-backtrace-crate"]

[dependencies.structopt]
version = "0.3.21"
features = ["wrap_help"]

[dependencies.tokio]
version = "1.5.0"
features = ["rt", "rt-multi-thread", "macros", "fs"]

[dependencies.tower]
version = "0.4.6"
features = ["make"]

[dev-dependencies]
bardecoder = "0.2.2"
cradle = "0.0.11"
executable-path = "1.0.0"
guard = "0.5.1"
image = "0.22.0"
libc = "0.2.94"
nix = "0.20.0"
pretty_assertions = "0.7.2"
regex = "1.5.4"
scraper = "0.12.0"
tempfile = "3.2.0"
resvg = "0.15.0"

[dev-dependencies.reqwest]
version = "0.11.3"
features = ["blocking", "stream"]

[dev-dependencies.lnd-test-context]
path = "lnd-test-context"

[[test]]
name = "smoke"
path = "tests/smoke.rs"
test = false

[features]
slow-tests = []
