[package]
name = "agora"
version = "0.1.0"
description = "File server that accepts Lightning Network payments for downloads"
authors = ["Casey Rodarmor <casey@rodarmor.com>", "Sönke Hahn <soenkehahn@gmail.com>"]
license = "CC0-1.0"
edition = "2018"
repository = "https://github.com/agora-org/agora"
homepage = "https://github.com/agora-org/agora"

[workspace]
members = [".", "agora-lnd-client", "bin/prerelease", "bin/publish", "lnd-test-context"]

[dependencies]
async-rustls = "0.2.0"
backtrace = "0.3.61"
bytes = "1.0.1"
color-backtrace = "0.5.1"
env_logger = "0.9.0"
form_urlencoded = "1.0.1"
futures = "0.3.14"
futures-util = "0.3.17"
hex = "0.4.3"
http = "0.2.4"
lexiclean = "0.0.1"
log = "0.4.14"
maud = "0.22.2"
mime_guess = "2.0.3"
openssl = "0.10.35"
percent-encoding = "2.1.0"
pin-project = "1.0.7"
pulldown-cmark = "0.8.0"
qrcodegen = "=1.6.0"
rust-embed = "6.2.0"
rustls-acme = "0.1.7"
serde_yaml = "0.8.17"
termcolor = "1.1.2"
tokio-rustls = "0.22.0"
tonic = "0.4.3"

[dependencies.agora-lnd-client]
path = "agora-lnd-client"
version = "0.0.1"

[dependencies.hyper]
version = "0.14.7"
features = ["server", "stream", "tcp", "http1", "http2"]

[dependencies.serde]
version = "1.0.126"
features = ["derive"]

[dependencies.snafu]
version = "0.6.10"
features = ["backtraces-impl-backtrace-crate"]

[dependencies.structopt]
version = "0.3.21"
features = ["wrap_help"]

[dependencies.tokio]
version = "1.5.0"
features = ["rt", "rt-multi-thread", "macros", "fs"]

[dependencies.tokio-stream]
version = "0.1.7"
features = ["net"]

[dependencies.tower]
version = "=0.4.8"
features = ["make"]

[dev-dependencies]
bardecoder = "0.2.2"
chromiumoxide = "0.3.1"
executable-path = "1.0.0"
guard = "0.5.1"
image = "0.22.0"
libc = "0.2.94"
lightning-invoice = "0.10.0"
nix = "0.23.0"
pretty_assertions = "1.0.0"
regex = "1.5.4"
resvg = "0.15.0"
scraper = "0.12.0"
tempfile = "3.2.0"
tiny-skia = "0.5.1"
unindent = "0.1.7"
usvg = "0.15.0"

[dev-dependencies.lnd-test-context]
path = "lnd-test-context"

[dev-dependencies.rcgen]
version = "0.8.13"
features = ["x509-parser"]

[dev-dependencies.reqwest]
version = "0.11.3"
features = ["blocking", "stream", "rustls-tls"]
default-features = false

[[test]]
name = "integration"
path = "tests/integration.rs"
test = false

[features]
slow-tests = []
