[package]
name = "agora-lnd-client"
version = "0.0.2"
description = "Agora LND client library"
authors = ["Casey Rodarmor <casey@rodarmor.com>", "Sönke Hahn <soenkehahn@gmail.com>"]
edition = "2018"
license = "CC0-1.0"
repository = "https://github.com/soenkehahn/agora"
homepage = "https://github.com/soenkehahn/agora"

[lib]
doctest = false

[dependencies]
hex = "0.4.3"
http = "0.2.4"
hyper = "0.14.9"
hyper-openssl = "0.9.1"
num-format = "0.4.0"
prost = "0.8.0"
regex = "1.5.4"
tonic = "0.5.2"
tower = "0.4.8"
async-trait = "0.1.53"
dyn-clone = "1.0.5"

[target.'cfg(unix)'.dependencies]
cln-rpc = "0.1.0"

[dependencies.openssl]
version = "0.10.35"
features = ["vendored"]

[dependencies.serde]
version = "1.0.127"
features = ["derive"]

[dev-dependencies]
lnd-test-context = { path = "../lnd-test-context" }
pretty_assertions = "0.7.2"
serde_yaml = "0.8.17"

[dev-dependencies.tokio]
version = "1.7.1"
features = ["parking_lot"]

[build-dependencies]
tonic-build = "0.5.2"
