[package]
name = "lnd-test-context"
version = "0.0.0"
authors = ["Casey Rodarmor <casey@rodarmor.com>"]
edition = "2018"
publish = false

[dependencies]
reqwest = "0.11.3"
cradle = "0.0.4"
hex-literal = "0.3.1"
pretty_assertions = "0.7.2"
sha2 = "0.9.5"
tempfile = "3.2.0"
lnd-client = { path = "../lnd-client" }

[dependencies.tonic]
version = "0.4.3"
features = ["transport", "tls", "h2"]

[dependencies.tokio]
version = "1.7.1"
features = ["parking_lot"]
