[package]
name = "lnd-test-context"
version = "0.0.0"
authors = ["Casey Rodarmor <casey@rodarmor.com>"]
edition = "2018"
publish = false

[lib]
doctest = false

[dependencies]
cradle = "0.0.9"
hex-literal = "0.3.1"
pretty_assertions = "0.7.2"
reqwest = "0.11.3"
serde_json = "1.0.64"
sha2 = "0.9.5"
tempfile = "3.2.0"

[dependencies.tokio]
version = "1.7.1"
features = ["fs", "parking_lot"]

[dependencies.tonic]
version = "0.4.3"
features = ["transport", "tls", "h2"]
